--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-baudrate = 115200
+monitor_speed = 115200
 
 # using the latest stable version
 lib_deps = ESP Async WebServer
